# a2ml

./: .buildinfo  .dockerignore  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  _tox.ini  a2ml.py  a2ml_cli.py  automl_setup_mac.sh  automl_setup_mac.yaml  baseball.csv  baseball_predict.csv  baseball_predicted.csv  develop.client.env.example  develop.env.example  docker-compose-min.yaml  docker-compose-redis.yaml  docker-compose.task.yml  docker-compose.test.yml  docker-compose.yml  gc_a2ml.py  gc_a2ml.sh  gc_deploy.sh  gc_evaluate.sh  gc_import.sh  gc_makedataset.py  gc_predict.sh  gc_train.sh  genindex.html  get_data.py  index.html  intro.html  moneyball.csv  objects.inv  perms.sh  (+9 more)
.azure/: config.json
.circleci/: config  config.yml
.github/: PULL_REQUEST_TEMPLATE.md
_sources/: index.rst.txt  intro.rst.txt
_static/: documentation_options.js
a2ml/: __init__.py
community/: authors.html  contributing.html  philosophy.html  todo.html
dev/: advanced.html  api.html  authentication.html  cli.html  configuration.html  install.html  mlram.html  quickstart.html  roi_language.html
docs/: requirements.txt
ex1/: config.yaml  moneyball_gc.pkl
iris_train/: auger_experiment.yml
old_circleci/: config.yml
test/: auger.yaml  config.yaml
test1/: auger.yaml  config.yaml  google.yaml
test2/: auger.yaml  config.yaml
tests/: _test_azure_a2ml.py  _test_azure_auth_cmdl.py  _test_local.py  cmdl_test.py  config_yaml_test.py  conftest.py  test_a2ml_facade.py  test_auger_a2ml.py  test_auger_auth_cmdl.py  test_cmdl.py  (+7 more)
(+447 files in other folders)
