[metadata]
name = a2ml
version = attr: a2ml.__version__
author = Auger AI
author_email = hello@auger.ai
url = https://a2ml.org
project_urls =
    Documentation = https://a2ml.org
    Changelog = https://github.com/augerai/a2ml/releases
    Issue Tracker = https://github.com/augerai/a2ml/issues
description = A powerful API to Automate Machine Learning workflows from multiple vendors.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
platforms = any
test_suite = tests
python_requires = >=3
keywords = azure, augerai, ai, machine learning, automl, deeplearn, api, sdk
license = Apache License 2.0

[options]
zip_safe = False
packages = find:

[options.package_data]
a2ml =
    'api/azure/*.template'
    'cmdl/template/*.template'
    'cmdl/template/*.yaml'

[options.entry_points]
console_scripts =
    a2ml = a2ml.cmdl.cmdl:cmdl

[tool:pytest]
addopts =
    --cov=a2ml
    --cov-report=html
    --ignore=tests/integration
    -sv
    -vv 
    -o log_cli=True 
    -o log_cli_level=info
    -W ignore
testpaths = tests
